update widget position member variable when window is moved for any reason. r=bryner,ere bug 224760, 223901